# LuaCraft

./: .gitignore  CMakeLists.txt  Changelogs.md  LICENSE  ProFi.lua  README.md  conf.lua  engine.lua  gamestatelist.txt  main.lua
cpp_rewrite/: CMakeLists.txt  README.md  main.cpp
cpp_rewrite/gamestatehandling/: GameState.h  GameStateManager.h  MainMenuState.cpp  MainMenuState.h  SettingsState.cpp  SettingsState.h
cpp_rewrite/libs/SFML-2.6.1/examples/ftp/: Ftp.cpp
cpp_rewrite/libs/SFML-2.6.1/examples/island/: Island.cpp
cpp_rewrite/libs/SFML-2.6.1/examples/joystick/: Joystick.cpp
cpp_rewrite/libs/SFML-2.6.1/examples/opengl/: OpenGL.cpp
cpp_rewrite/libs/SFML-2.6.1/examples/shader/: Effect.hpp
cpp_rewrite/libs/SFML-2.6.1/examples/sockets/: TCP.cpp  UDP.cpp
cpp_rewrite/libs/SFML-2.6.1/examples/sound/: Sound.cpp
cpp_rewrite/libs/SFML-2.6.1/examples/sound_capture/: SoundCapture.cpp
cpp_rewrite/libs/SFML-2.6.1/examples/tennis/: Tennis.cpp
cpp_rewrite/libs/SFML-2.6.1/examples/voip/: Client.cpp  Server.cpp
cpp_rewrite/libs/SFML-2.6.1/examples/vulkan/: Vulkan.cpp
cpp_rewrite/libs/SFML-2.6.1/examples/win32/: Win32.cpp
cpp_rewrite/libs/SFML-2.6.1/examples/window/: Window.cpp
cpp_rewrite/libs/SFML-2.6.1/include/SFML/: Audio.hpp  GpuPreference.hpp  Graphics.hpp  Main.hpp  Network.hpp  OpenGL.hpp  System.hpp  Window.hpp
cpp_rewrite/libs/SFML-2.6.1/include/SFML/Audio/: AlResource.hpp  Export.hpp  InputSoundFile.hpp  Listener.hpp  Music.hpp  OutputSoundFile.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundFileFactory.hpp  SoundFileReader.hpp  SoundFileWriter.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
cpp_rewrite/libs/SFML-2.6.1/include/SFML/Graphics/: BlendMode.hpp  CircleShape.hpp  Color.hpp  ConvexShape.hpp  Drawable.hpp  Export.hpp  Font.hpp  Glsl.hpp  Glyph.hpp  Image.hpp  Rect.hpp  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  View.hpp
cpp_rewrite/libs/SFML-2.6.1/include/SFML/Network/: Export.hpp  Ftp.hpp  Http.hpp  IpAddress.hpp  Packet.hpp  Socket.hpp  SocketHandle.hpp  SocketSelector.hpp  TcpListener.hpp  TcpSocket.hpp  UdpSocket.hpp
cpp_rewrite/libs/SFML-2.6.1/include/SFML/System/: Clock.hpp  Err.hpp  Export.hpp  FileInputStream.hpp  InputStream.hpp  Lock.hpp  MemoryInputStream.hpp  Mutex.hpp  NativeActivity.hpp  NonCopyable.hpp  Sleep.hpp  String.hpp  Thread.hpp  ThreadLocal.hpp  ThreadLocalPtr.hpp  Time.hpp  Utf.hpp  Vector2.hpp  Vector3.hpp
cpp_rewrite/libs/SFML-2.6.1/include/SFML/Window/: Clipboard.hpp  Context.hpp  ContextSettings.hpp  Cursor.hpp  Event.hpp  Export.hpp  GlResource.hpp  Joystick.hpp  Keyboard.hpp  Mouse.hpp  Sensor.hpp  Touch.hpp  VideoMode.hpp  Vulkan.hpp  Window.hpp  WindowBase.hpp  WindowHandle.hpp
cpp_rewrite/libs/Vulkan-Headers-main/: BUILD.gn
cpp_rewrite/libs/Vulkan-Headers-main/include/vulkan/: vulkan_core.h  vulkan_hash.hpp  vulkan_to_string.hpp
cpp_rewrite/libs/Vulkan-Headers-main/registry/: video.xml  vk.xml
cpp_rewrite/libs/Vulkan-Loader-main/loader/: cJSON.h  vk_loader_layer.h
cpp_rewrite/libs/Vulkan-Loader-main/scripts/: dispatch_table_helper_generator.py
cpp_rewrite/libs/glfw-3.4.bin.WIN64/include/GLFW/: glfw3.h
cpp_rewrite/libs/glfw-3.4/examples/: heightmap.c  triangle-opengl.c  windows.c
cpp_rewrite/libs/glfw-3.4/include/GLFW/: glfw3.h
cpp_rewrite/libs/glfw-3.4/tests/: gamma.c  joysticks.c  timeout.c  title.c
cpp_rewrite/libs/gltext/: gltext.h
cpp_rewrite/src/: Globals.cpp  Globals.h  LuaCraftGlobals.cpp  LuaCraftGlobals.h  VulkanRenderer.cpp  VulkanRenderer.h  main.cpp
cpp_rewrite/src/gamestatehandling/: GameStateManager.h  MainMenuState.cpp  MainMenuState.h  SettingsState.cpp  SettingsState.h
cpp_rewrite/src/gamestatehandling/core/: GameState.h  GameStateManager.cpp  GameStateManager.h  GameStatesUtils.cpp  GameStatesUtils.h
cpp_rewrite/src/gamestatehandling/states/: MainMenuState.cpp  MainMenuState.h  SettingsState.cpp  SettingsState.h  VulkanGameState.cpp  VulkanGameState.h
cpp_rewrite/src/gamestatehandling/states/gameplaying/: OpenGLGameState.cpp  OpenGLGameState.h
cpp_rewrite/src/libs/SFML-2.6.1/examples/ftp/: Ftp.cpp
cpp_rewrite/src/libs/SFML-2.6.1/examples/opengl/: OpenGL.cpp
cpp_rewrite/src/libs/SFML-2.6.1/examples/sockets/: TCP.cpp
cpp_rewrite/src/libs/SFML-2.6.1/examples/voip/: Server.cpp
cpp_rewrite/src/libs/SFML-2.6.1/examples/window/: Window.cpp
cpp_rewrite/src/libs/SFML-2.6.1/include/SFML/: Main.hpp  Network.hpp  Window.hpp
cpp_rewrite/src/libs/SFML-2.6.1/include/SFML/Audio/: Export.hpp  Music.hpp  OutputSoundFile.hpp  Sound.hpp  SoundBufferRecorder.hpp  SoundFileWriter.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
cpp_rewrite/src/libs/SFML-2.6.1/include/SFML/Graphics/: CircleShape.hpp  Export.hpp  Glsl.hpp  Glyph.hpp  Image.hpp  Rect.hpp  RectangleShape.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Texture.hpp  Transform.hpp  Transformable.hpp
cpp_rewrite/src/libs/SFML-2.6.1/include/SFML/Network/: Export.hpp  Socket.hpp  SocketHandle.hpp  SocketSelector.hpp  TcpListener.hpp  UdpSocket.hpp
cpp_rewrite/src/libs/Vulkan-Headers-main/include/vulkan/: vulkan_core.h
cpp_rewrite/src/libs/Vulkan-Headers-main/registry/: video.xml  vk.xml
cpp_rewrite/src/libs/glfw-3.4/examples/: gears.c  offscreen.c  particles.c  sharing.c  splitview.c  triangle-opengles.c  wave.c
cpp_rewrite/src/libs/glfw-3.4/include/GLFW/: glfw3.h
cpp_rewrite/src/libs/glfw-3.4/tests/: clipboard.c  events.c  glfwinfo.c  monitors.c  msaa.c  reopen.c  tearing.c  threads.c  window.c
cpp_rewrite/src/utils/: luacraft_logger.cpp  luacraft_logger.h  threads_starter.cpp
libsanddlls/libs-include/ThreadedLoggerForCPP-main/: .gitignore  CMakeLists.txt  README.md
libsanddlls/libs-include/ThreadedLoggerForCPP-main/libs/include/ThreadedLoggerForCPP/: LoggerFileSystem.hpp  LoggerGlobals.hpp  LoggerThread.hpp
libsanddlls/libs-include/ThreadedLoggerForCPP-main/src/: main.cpp
(+1943 files in other folders)
